--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
+
